--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>/WEB-INF/config/egovframework/springmvc/dispatcher-servlet.xml</param-value>
+			<param-value>/WEB-INF/action-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
@@ -59,7 +59,7 @@
 		<auth-method>BASIC</auth-method>
 	</login-config>
     
-	<error-page>
+	<!-- <error-page>
 		<exception-type>java.lang.Throwable</exception-type>
 		<location>/common/error.jsp</location>
 	</error-page>
@@ -70,6 +70,6 @@
 	<error-page>
 		<error-code>500</error-code>
 		<location>/common/error.jsp</location>
-	</error-page>
+	</error-page> -->
     
 </web-app>
